# Rust-on-STM32H7

./: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs
scripts/: fft_256_logs_nodc_half.txt  fft_chopped_4k_nodc.txt  plot_fft.py
src/: main.rs
src/utilities/: mod.rs
