[package]
name = "lab_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7"
log = "0.4.20"
cfg-if = "1.0.0"
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4.0"
microfft = "0.5.1"
num-complex = { version = "0.4.4", default-features = false }
micromath = "2.0.0"
arrayvec = { version = "0.7.4", default-features = false }

[dependencies.stm32h7xx-hal]
version = "^0"
features = ["stm32h743", "log-rtt", "log"]
